Fixed sticky banner overlapping part of footer
Closes #1137

--- a/source/stylesheets/_base.scss
+++ b/source/stylesheets/_base.scss
@@ -1,6 +1,12 @@
 body {
   padding-top: 50px;
 
+  &.has-sticky-banner {
+    @media (min-width: $screen-sm-min) {
+      padding-bottom: 75px;
+    }
+  }
+
   &.purple-bg {
     background-color: $color-primary;
     color: $color-white;
